--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "bootstrap-vue": "^2.23.1",
     "pinia": "^2.1.6",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-dropdowns": "^1.1.2",
+    "vue-tournament-bracket-generator": "github:diegomengarda/vue-tournament-bracket-generator"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
