--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.23.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-basic-alert": "^1.1.0",
     "vue-dropdowns": "^1.1.2",
     "vue-tournament-bracket-generator": "github:diegomengarda/vue-tournament-bracket-generator"
   },
