--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
+    "brackets-manager": "^1.6.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-basic-alert": "^1.1.0",
