--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-basic-alert": "^1.1.0",
+    "vue-clipboard3": "^2.0.0",
     "vue-dropdowns": "^1.1.2",
-    "vue-tournament-bracket-generator": "github:diegomengarda/vue-tournament-bracket-generator"
+    "vue-tournament-bracket-generator": "github:diegomengarda/vue-tournament-bracket-generator",
+    "vue3-clipboard": "^1.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
