--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
