--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@venegrad/vue3-autocomplete": "^1.0.7",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
     "brackets-manager": "^1.6.4",
     "brackets-memory-db": "^1.0.4",
+    "gif.js.optimized": "^1.0.1",
     "pinia": "^2.1.6",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
     "vue": "^3.3.4",
     "vue-basic-alert": "^1.1.0",
     "vue-clipboard3": "^2.0.0",
     "vue-dropdowns": "^1.1.2",
     "vue-tournament": "^1.1.1",
     "vue-tournament-bracket-generator": "github:diegomengarda/vue-tournament-bracket-generator",
+    "vue3-autocomplete": "^1.0.4",
     "vue3-clipboard": "^1.0.0"
   },
   "devDependencies": {
